--- a/concats-BootstrapTable/views/Summary.ejs
+++ b/concats-BootstrapTable/views/Summary.ejs
@@ -3,7 +3,7 @@
 </div>-->
 <div class="main_content">
     <div id="toolbar" class="btn-group">
-        <button id="btn_add" type="button" class="btn btn-sm btn-success">
+        <button id="btn_add" type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#Module_add_dialog">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增模块
         </button>
         <button id="btn_edit" type="button" class="btn btn-sm btn-primary">
@@ -13,6 +13,64 @@
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
         </button>
     </div>
-
+    <!--警告框-->
+    <div class="alert alert-danger alert-dismissible fade in hidden" id="del_alert">
+      <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>-->
+      <p>确认删除？</p>
+      <p>
+        <button type="button" class="btn btn-danger">Take this action</button>
+        <button type="button" class="btn btn-default">Or do this</button>
+      </p>
+    </div>
+    <!--联系人表格-->
     <table id="contacts" class="table table-bordered"></table>
+
+    <!-- 模态框（Modal） -->
+    <div class="modal fade" id="Module_add_dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">新增模块</h4>
+                </div>
+                <div class="modal-body">
+                    <!--模态框内容-->
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">模块名称</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Module Name">
+                        </div>
+                        <div class="form-group" id="contact_d">
+                            <label for="exampleInputPassword1">负责人</label>
+                            <!--<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Contacts">
+                                <span class="input-group-btn" id="Contacts_add_d">
+                                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus"></span></button>
+                                </span>
+                            </div><!-- /input-group -->
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">老大</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Project Leader">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">备注</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Remarks">
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                   
+                        <button type="button" class="btn btn-primary">提交更改</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                   
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- 模态框（Modal）end -->
+
+    
 </div>
