前端页面完成，加入X-editable插件，使用mongoose连接MongoDB并存储数据。

--- a/concats-BootstrapTable/views/Summary.ejs
+++ b/concats-BootstrapTable/views/Summary.ejs
@@ -12,6 +12,7 @@
         <button id="btn_delete" type="button" class="btn btn-sm btn-danger">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
         </button>
+
     </div>
     <!--警告框-->
     <div class="alert alert-danger alert-dismissible fade in hidden" id="del_alert">
@@ -26,6 +27,7 @@
     <table id="contacts" class="table table-bordered"></table>
 
     <!-- 模态框（Modal） -->
+    <form method="post" action="/addModule" class="form-horizontal" role="form" id="form_data" style="margin: 20px;">
     <div class="modal fade" id="Module_add_dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -35,42 +37,50 @@
                 </div>
                 <div class="modal-body">
                     <!--模态框内容-->
-                    <form>
+
                         <div class="form-group">
-                            <label for="exampleInputEmail1">模块名称</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Module Name">
+                            <label for="Module_d" class="col-sm-3 control-label">模块名称</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name = "Module" id="Module_d" placeholder="Module Name">
+                            </div>
                         </div>
+
                         <div class="form-group" id="contact_d">
-                            <label for="exampleInputPassword1">负责人</label>
+                            <label for="People_d" class="col-sm-3 control-label">负责人</label>
                             <!--<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Contacts">
-                                <span class="input-group-btn" id="Contacts_add_d">
-                                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus"></span></button>
-                                </span>
-                            </div><!-- /input-group -->
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Contacts" name="People" id="People_d">
+                                    <span class="input-group-btn" id="Contacts_add_d">
+                                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus"></span></button>
+                                    </span>
+                                </div><!-- /input-group -->
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">老大</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Project Leader">
+                            <label for="Leader_d" class="col-sm-3 control-label">老大</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name="Leader" id="Leader_d" placeholder="Project Leader">
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">备注</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Remarks">
+                            <label for="Remarks_d" class="col-sm-3 control-label">备注</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name="Remarks" id="Remarks_d" placeholder="Remarks">
+                            </div>
                         </div>
-                    </form>
+                    
 
                 </div>
                 <div class="modal-footer">
                    
-                        <button type="button" class="btn btn-primary">提交更改</button>
+                        <button type="submit" class="btn btn-primary">提交</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                    
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal -->
     </div>
+    </form>
     <!-- 模态框（Modal）end -->
-
-    
 </div>
