--- a/concats-BootstrapTable/public/stylesheets/style.css
+++ b/concats-BootstrapTable/public/stylesheets/style.css
@@ -13,3 +13,17 @@ a {
   right: 0;
   width: 80%;
 }
+.popover-wid{
+  width: 300px;
+  height: 48px;
+}
+/*.popover_form .editable-input{
+  display: inline-block;
+}
+.popover_form .editable-buttons{
+  display: inline-block;
+  margin-right: 3px;
+}
+.popover_form{
+  width: 320px;
+}*/
