--- a/concats-BootstrapTable/views/header.ejs
+++ b/concats-BootstrapTable/views/header.ejs
@@ -7,10 +7,11 @@
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/bootstrap/table/bootstrap-table.css">
 <link rel="stylesheet" href="/stylesheets/style.css">
-
+<link rel="stylesheet" href="/bootstrap/editable/css/bootstrap-editable.css">
 
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="/bootstrap/table/bootstrap-table.js"></script>
+<script src="/bootstrap/editable/js/bootstrap-editable.min.js"></script>
 
 </head>
 <body>
@@ -24,3 +25,5 @@
 </nav>
 
 <Btable>
+
+    
