完善增删功能，前后台数据互通，toastr提示操作结果

--- a/concats-BootstrapTable/views/header.ejs
+++ b/concats-BootstrapTable/views/header.ejs
@@ -8,11 +8,12 @@
 <link rel="stylesheet" href="/bootstrap/table/bootstrap-table.css">
 <link rel="stylesheet" href="/stylesheets/style.css">
 <link rel="stylesheet" href="/bootstrap/editable/css/bootstrap-editable.css">
+<link rel="stylesheet" href="/stylesheets/toastr.min.css"/>  
 
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="/bootstrap/table/bootstrap-table.js"></script>
 <script src="/bootstrap/editable/js/bootstrap-editable.min.js"></script>
-
+<script src="/javascripts/toastr.min.js"></script>
 </head>
 <body>
 
